# social_site

./: pyproject.toml
bookmarks/account/: views.py
bookmarks/account/templates/: base.html
bookmarks/account/templates/account/: login.html
bookmarks/bookmarks/: settings.py
