[tool.poetry]
name = "social site"
version = "0.1.0"
description = ""
authors = ["darkwolf <darkwolf1990janary@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.1.0,<4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
